# mcp-time

./: pyproject.toml
mcp-time/: pyproject.toml
mcp-time/mcp_time/: server.py
mcp_time/: server.py
mcp_time.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
