[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-time"
version = "0.1.1"
description = "MCP server (STDIO) qui renvoie l'heure courante."
requires-python = ">=3.9"
dependencies = [
  "mcp[cli]>=1.6.0"
]

[project.scripts]
mcp-time = "mcp_time.server:main"
